@@ -1,3 +1,7 @@
+2011-02-07  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* soap-client.el: 53 some fixes suggested by `checkdoc'
+
 2011-02-04  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* soap-client.el (soap-parse-wsdl, soap-parse-schema)
